--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             <hr>
         </header>
         <div id="start">
-            <div class="first-pic">
-                <img src="https://images.pexels.com/photos/4084936/pexels-photo-4084936.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
+            <div ">
+                <img src="https://images.pexels.com/photos/262978/pexels-photo-262978.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"class="first-pic>
             </div>
         </div>
         <div>
