--- a/reservation.html
+++ b/reservation.html
@@ -27,3 +27,7 @@
                <a href="menu.html">Munu</a>
                <a href="contact.html">Contact</a>
             </nav>
+        </header>
+
+        <canvas id="myCanvas" ></canvas>
+
