--- a/reservation.html
+++ b/reservation.html
@@ -27,55 +27,53 @@
           <video preload="auto" playsinline autoplay muted loop data-object-fit="cover" poster="">
             <source src="https://player.vimeo.com/external/559960987.sd.mp4?s=324a7f478eefb57438117fdcca448e864c57a695&profile_id=165&oauth2_token_id=57447761" type="video/mp4">
           </video>
-          <section>
-          <form action="reservation.php" method="post">
-            <div class="elem-group">
-              <label for="name">Your Name</label>
-              <input type="text" id="name" name="visitor_name" placeholder="John Doe" pattern=[A-Z\sa-z]{3,20} required>
-            </div>
-            <div class="elem-group">
-              <label for="email">Your E-mail</label>
-              <input type="email" id="email" name="visitor_email" placeholder="john.doe@email.com" required>
-            </div>
-            <div class="elem-group">
-              <label for="phone">Your Phone</label>
-              <input type="tel" id="phone" name="visitor_phone" placeholder="498-348-3872" pattern=(\d{3})-?\s?(\d{3})-?\s?(\d{4}) required>
-            </div>
-            <div class="checkbox">
-              <label><input type="checkbox" name="remember"> Remember me</label>
-            </div>
-            <hr>
-            <div class="elem-group inlined">
-                <label for="number">No. of guests</label>
-                <input type="number">
-            </div>
-            <div class="elem-group inlined">
-              <label for="choose-date">Choose the date</label>
-              <input type="date" id="choose-date" name="choose-date" required>
-            </div>
-            <div class="elem-group inlined">
-                <label for="time">Time</label>
-                <input type='time'>
-            </div>
-           
-            <div class="elem-group">
-              <label for="room-selection">Select Table Preference</label>
-              <select id="room-selection" name="room_preference" required>
-                  <option value="">Choose a table from the List</option>
-                  <option value="connecting">Connecting</option>
-                  <option value="adjoining">Adjoining</option>
-                  <option value="adjacent">Adjacent</option>
-              </select>
-            </div>
-            <hr>
-            <div class="elem-group">
-              <label for="message">Anything Else?</label>
-              <textarea id="message" name="visitor_message" placeholder="Tell us anything else that might be important." required></textarea>
-            </div>
-            <button type="submit">Book The Table</button>
-          </form>
-          </section>
-    </body>
-</html>      
         
-
+          <body>
+            <div>
+            <div>
+            <h2>Time Open</h2>
+            <h3>Monday-Friday</h3>
+            <p>7am - 11am (breakfast)</p>
+            <p>11am - 10pm (lunch/dinner)</p>
+            <h3>Saturday and sunday</h3>
+            <p>9am - 1am (breakfast)</p>
+            <p>1am - 10pm (lunch/dinner)</p>
+            <hr>
+            <h4>Call Us: (123) 45-45-456</h4>
+            </div>
+            <div>
+            <form action="#">
+            <h2>Reservation Online</h2>
+            <div>
+            <p>Your Name</p>
+            <input type="text" placeholder="Your Name">
+            </div>
+            <div>
+            <p>Your email</p>
+            <input type="email" placeholder="Your email">
+            </div>
+            <div>
+            <p>Date</p>
+            <input type="date">
+            </div>
+            <div>
+            <p>Time</p>
+            <input type="time">
+            </div>
+            <div>
+            <p>How many people?</p>
+            <select name="select" id="#">
+            <option value="1">1 person</option>
+            <option value="2">2 persons</option>
+            <option value="3">3 persosn</option>
+            <option value="4">4 persons</option>
+            <option value="5">5 persons</option>
+            <option value="5+">5+ persons</option>
+            </select>
+            </div>
+            <button>Submit</button>
+            </form>
+            </div>
+            </div>
+            </body>
+          </html>
