--- a/menu.html
+++ b/menu.html
@@ -32,7 +32,7 @@
             
         </header>
 
-            <section class="menu">
+            <div class="menu">
                 <br>
                 <h1>Restaurant Menu</h1>
                 <br>
@@ -90,7 +90,7 @@
                    
 
                 </div>
-            </section>
+            </div>
             <footer>
                 <div id="social-networks">
                     <div>
