--- a/index.html
+++ b/index.html
@@ -29,13 +29,14 @@
           
   <!-- Background image -->
   <div class="container hero">
+    
     <div class="row">
         <div class="col-12 col-lg-6 col-xl-5 offset-xl-1">
             <h1>The revolution is here.</h1>
             <p>Mauris egestas tellus non ex condimentum, ac ullamcorper sapien dictum. Nam consequat neque quis sapien viverra convallis. In non tempus lorem. </p><button class="btn btn-light btn-lg action-button" type="button">Learn More</button></div>
         <div
             class="col-md-5 col-lg-5 offset-lg-1 offset-xl-0 d-none d-lg-block phone-holder">
-            <div class="iphone-mockup"><img src='https://img.freepik.com/free-photo/lifestyle-portrait-elegant-young-woman-with-dark-wavy-hairstyle-trendy-makeup-fashionable-beige-pullover-coat-sitting-cafe-terrace-drinking-coffee-from-white-cup_197531-24448.jpg?size=626&ext=jpg' class="device">
+            <div class="iphone-mockup"><img src='' class="device">
                 <div class="screen"></div>
             </div>
     </div>
